[gd_scene load_steps=7 format=3 uid="uid://bei5o56wt8v53"]

[ext_resource type="Theme" uid="uid://cjio8qyohpybk" path="res://game/hud_style.tres" id="1_dcqr0"]
[ext_resource type="Script" uid="uid://b7kyxrhd772tk" path="res://menu/win_screen_2.gd" id="2_6r3un"]
[ext_resource type="FontFile" uid="uid://yg3ufmt77a5i" path="res://ui_common/GrapeSoda.ttf" id="3_6r3un"]
[ext_resource type="StyleBox" uid="uid://bh11fujf0shvo" path="res://ui_common/panel_container.tres" id="4_dwn6k"]
[ext_resource type="Texture2D" uid="uid://cg54j1urmr3uj" path="res://sprite/panel_sprite.png" id="5_0qoho"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8ji7p"]
content_margin_left = 40.0
content_margin_right = 40.0
content_margin_bottom = 20.0
texture = ExtResource("5_0qoho")
texture_margin_left = 32.0
texture_margin_top = 16.0
texture_margin_right = 32.0
texture_margin_bottom = 16.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
modulate_color = Color(0.400905, 0.304313, 0.129603, 1)

[node name="StartMenu" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_dcqr0")
script = ExtResource("2_6r3un")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_6r3un")
theme_override_font_sizes/font_size = 32
text = "Win!
"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="player" type="PanelContainer" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_styles/panel = ExtResource("4_dwn6k")

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/player"]
layout_mode = 2

[node name="TitleLabel2" type="Label" parent="VBoxContainer/HBoxContainer2/player/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Witch"
horizontal_alignment = 1

[node name="player_score" type="Label" parent="VBoxContainer/HBoxContainer2/player/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "156"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/player/VBoxContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/player/VBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/player/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "total"

[node name="enemies_player" type="Label" parent="VBoxContainer/HBoxContainer2/player/VBoxContainer2/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "1243"

[node name="HSeparator2" type="VSeparator" parent="VBoxContainer/HBoxContainer2/player/VBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/player/VBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2/player/VBoxContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Pawns"

[node name="pawns_pl" type="Label" parent="VBoxContainer/HBoxContainer2/player/VBoxContainer2/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "234243"

[node name="HSeparator3" type="VSeparator" parent="VBoxContainer/HBoxContainer2/player/VBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/player/VBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2/player/VBoxContainer2/HBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "Bats"

[node name="bats_pl" type="Label" parent="VBoxContainer/HBoxContainer2/player/VBoxContainer2/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "234243"

[node name="HSeparator4" type="VSeparator" parent="VBoxContainer/HBoxContainer2/player/VBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer4" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/player/VBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2/player/VBoxContainer2/HBoxContainer/VBoxContainer4"]
layout_mode = 2
text = "Blobs"

[node name="blobs_pl" type="Label" parent="VBoxContainer/HBoxContainer2/player/VBoxContainer2/HBoxContainer/VBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
text = "234243"

[node name="HSeparator5" type="VSeparator" parent="VBoxContainer/HBoxContainer2/player/VBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer5" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/player/VBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2/player/VBoxContainer2/HBoxContainer/VBoxContainer5"]
layout_mode = 2
text = "Slowbros"

[node name="slowbro" type="Label" parent="VBoxContainer/HBoxContainer2/player/VBoxContainer2/HBoxContainer/VBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
text = "234243"

[node name="rival" type="PanelContainer" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_8ji7p")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/rival"]
layout_mode = 2

[node name="TitleLabel2" type="Label" parent="VBoxContainer/HBoxContainer2/rival/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "GOLDEN KNIGHT"
horizontal_alignment = 1

[node name="rival_score" type="Label" parent="VBoxContainer/HBoxContainer2/rival/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "156"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/rival/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/rival/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/rival/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "total"

[node name="enemies_killed_rival" type="Label" parent="VBoxContainer/HBoxContainer2/rival/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "1243"

[node name="HSeparator2" type="VSeparator" parent="VBoxContainer/HBoxContainer2/rival/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/rival/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2/rival/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Pawns"

[node name="pawns_killed_rival" type="Label" parent="VBoxContainer/HBoxContainer2/rival/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "234243"

[node name="HSeparator3" type="VSeparator" parent="VBoxContainer/HBoxContainer2/rival/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/rival/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2/rival/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "Bats"

[node name="bats_killed_rival" type="Label" parent="VBoxContainer/HBoxContainer2/rival/VBoxContainer/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "234243"

[node name="HSeparator4" type="VSeparator" parent="VBoxContainer/HBoxContainer2/rival/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer4" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/rival/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2/rival/VBoxContainer/HBoxContainer/VBoxContainer4"]
layout_mode = 2
text = "Blobs"

[node name="blobs_killed_rival" type="Label" parent="VBoxContainer/HBoxContainer2/rival/VBoxContainer/HBoxContainer/VBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
text = "234243"

[node name="HSeparator5" type="VSeparator" parent="VBoxContainer/HBoxContainer2/rival/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer5" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/rival/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2/rival/VBoxContainer/HBoxContainer/VBoxContainer5"]
layout_mode = 2
text = "Slowbros"

[node name="rslowbro" type="Label" parent="VBoxContainer/HBoxContainer2/rival/VBoxContainer/HBoxContainer/VBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
text = "234243"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="playagain" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_6r3un")
theme_override_font_sizes/font_size = 32
text = "Play again"

[node name="new_game+" type="Button" parent="VBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("3_6r3un")
theme_override_font_sizes/font_size = 16
disabled = true
text = "New Game +"

[node name="Node2D" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Node2D"]
z_index = -1
offset_left = -100.0
offset_top = -79.0
offset_right = 782.0
offset_bottom = 442.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[connection signal="button_up" from="VBoxContainer/VBoxContainer/playagain" to="." method="_on_start_button_button_up"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/new_game+" to="." method="_on_new_game_pressed"]
